LPS-96452 fix for user icon overlaps margin

--- a/modules/apps/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_search_container.scss
+++ b/modules/apps/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_search_container.scss
@@ -15,8 +15,6 @@
 }
 
 .user-info {
-	overflow: hidden;
-
 	&.row,
 	.row {
 		margin-left: 0;
